<resources>
    <string name="app_name">Vitesse</string>
    <string name="searchbar_hint">Rechercher un candidat</string>
    <string name="progressbarDescrition">En attente des données</string>
    <string name="searchIcon">Icone de Recherche</string>
    <string name="all">Tous</string>
    <string name="favorites">Favoris</string>
    <string name="no_candidate">Aucun candidat</string>
    <string name="candidate_image">Image du candidat</string>
    <string name="search_hint">Recherche</string>
    <string name="page_Add_title">Ajouter un candidat</string>
    <string name="email">Email</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="phone">Téléphone</string>
    <string name="phone_icone">Icone de téléphone</string>
    <string name="birthday_icon">Icone d\'anniversaire</string>
    <string name="salary">Prétentions salariales</string>
    <string name="notes">Notes</string>
    <string name="save">Sauvegarder</string>
    <string name="mandatory_field">Champ obligatoire</string>
    <string name="invalid_format">Format invalide</string>
    <string name="star">Mettre en Favoris</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="call">Appel</string>
    <string name="sms">SMS</string>
    <string name="email2">E-mail</string>
    <string name="about">A propos</string>
    <string name="birthday">Anniversaire</string>
    <string name="salaryNeed">Prétentions salariales</string>
    <string name="page_Detail_title">Details du candidat</string>
    <string name="deleteDialogTitle">Suppression</string>
    <string name="deleteDialogMessage">Etes-vous sûr de vouloir supprimer ce candidat? Cette action est irréversible.</string>
    <string name="declineDeleteDialog">Annuler</string>
    <string name="acceptDeleteDialog">Confirmer</string>
    <string name="edit_candidate">Modifier un candidat</string>
    <string name="boutonAddDescription">Nouveau candidat</string>
    <string name="enterADate">Entrer une date</string>
    <string name="selectADate">Sélectionner une date</string>
    <string name="back">Retour</string>
</resources>