<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/baseline_arrow_back_24"

                app:title="@string/page_Add_title" />

        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/image"
            android:layout_width="373dp"
            android:layout_height="195dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/candidate_image"
            android:src="@drawable/no_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/firstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/phone_input_layout"
            app:layout_constraintTop_toBottomOf="@id/image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                tools:text="John" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Name Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="45dp"
            android:hint="@string/lastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/phone_input_layout"
            app:layout_constraintTop_toBottomOf="@id/first_name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                tools:text="Doe" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/phoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"

            android:contentDescription="@string/phone_icone"
            android:src="@drawable/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/phone_input_layout" />

        <!-- Phone Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/phoneIcon"
            app:layout_constraintTop_toBottomOf="@id/last_name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:inputType="number"
                tools:text="Doe" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/mailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"

            android:contentDescription="@string/phone_icone"
            android:src="@drawable/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/email_input_layout" />

        <!-- Email Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/phoneIcon"
            app:layout_constraintTop_toBottomOf="@id/phone_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:inputType="number"
                tools:text="Doe" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/birthday_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
            app:srcCompat="@drawable/birthday" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/email_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/email_input_layout" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/birthday_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePicker"
            app:srcCompat="@drawable/attach_money" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/salarial_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/salary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/phoneIcon"
            app:layout_constraintTop_toBottomOf="@id/datePicker">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:inputType="numberDecimal"
                tools:text="Doe" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/birthday_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/salarial_input_layout"
            app:srcCompat="@drawable/notes" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notes_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/phoneIcon"
            app:layout_constraintTop_toBottomOf="@id/salarial_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:gravity="start|top"
                android:layout_marginBottom="45dp"
                android:inputType="textMultiLine"
                tools:text="Doe" />
        </com.google.android.material.textfield.TextInputLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>