<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailCandidate"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:navigationContentDescription="@string/back"
                app:menu="@menu/menu_detail_candidate"
                tools:title="John Doe" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="375dp"
            android:layout_height="195dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/candidate_image"
            android:src="@drawable/no_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <Button
            android:id="@+id/callIconButton"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="13dp"
            android:contentDescription="@string/call"
            app:icon="@drawable/phone"
            app:iconTint="@null"
            app:layout_constraintEnd_toStartOf="@id/smsIconButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <TextView
            android:id="@+id/callText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/callIconButton"
            app:layout_constraintStart_toStartOf="@+id/callIconButton"
            app:layout_constraintTop_toBottomOf="@+id/callIconButton" />

        <Button
            android:id="@+id/smsIconButton"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sms"
            app:icon="@drawable/sms"
            app:iconTint="@null"
            app:layout_constraintEnd_toStartOf="@id/emailIconButton"
            app:layout_constraintStart_toEndOf="@+id/callIconButton"
            app:layout_constraintTop_toTopOf="@+id/callIconButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/smsIconButton"
            app:layout_constraintStart_toStartOf="@+id/smsIconButton"
            app:layout_constraintTop_toBottomOf="@+id/smsIconButton" />

        <Button
            android:id="@+id/emailIconButton"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/email"
            app:icon="@drawable/email"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/smsIconButton"
            app:layout_constraintTop_toTopOf="@+id/smsIconButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/emailIconButton"
            app:layout_constraintStart_toStartOf="@+id/emailIconButton"
            app:layout_constraintTop_toBottomOf="@+id/emailIconButton" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/aboutCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            app:layout_constraintTop_toBottomOf="@id/callText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?attr/materialCardViewOutlinedStyle"
            app:cardBackgroundColor="#FDF1FF">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="159dp">

                <TextView
                    android:id="@+id/aboutTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/about"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/aboutAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:textColor="#1D1B20"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/aboutTitle"
                    app:layout_constraintTop_toBottomOf="@id/aboutTitle"
                    tools:text="03/03/1989 (34 ans)" />

                <TextView
                    android:id="@+id/aboutSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:textColor="#49454F"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/aboutTitle"
                    app:layout_constraintTop_toBottomOf="@id/aboutAge" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/salaryCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/aboutCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?attr/materialCardViewOutlinedStyle"
            app:cardBackgroundColor="#FDF1FF">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="183dp">

                <TextView
                    android:id="@+id/salaryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/salaryNeed"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/eurosSalary"
                    android:layout_marginTop="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="3500 €"
                    android:textColor="#1D1B20"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/salaryTitle"
                    app:layout_constraintStart_toStartOf="@id/salaryTitle" />

                <TextView
                    android:id="@+id/poundSalary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="soit £ 3026,99"
                    android:layout_marginTop="32dp"
                    android:textColor="#49454F"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/eurosSalary"
                    app:layout_constraintStart_toStartOf="@id/salaryTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/notesCard"
            style="?attr/materialCardViewOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="#FDF1FF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/salaryCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="316dp">

                <TextView
                    android:id="@+id/notesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/notes"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/notesValue"
                    android:layout_width="330dp"
                    android:layout_height="220dp"
                    android:isScrollContainer="true"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:layout_marginTop="40dp"
                    android:textColor="#49454F"
                    android:textSize="14sp"
                    android:gravity="start|top"
                    app:layout_constraintStart_toStartOf="@id/notesTitle"
                    app:layout_constraintTop_toBottomOf="@id/notesTitle"

                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>